Add styles to layout-out.hbs and homepage.hbs
It's not great, but it will do for now

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,6 +1,9 @@
-{{#each miniatures as |miniature index|}}
-  <div class="container-miniature-item">
-    <h2>{{miniature.name}}</h2>
-    <img src="./images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
-  </div>
-{{/each}}
+<section class="container-miniatures row">
+  {{#each miniatures as |miniature index|}}
+    <div class="container-miniature-item col s6 m6 l6 xl6">
+      <h2>{{miniature.name}}</h2>
+      <img src="./images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
+    </div>
+  {{/each}}
+</section>
+
