--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -6,10 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Star Wars Miniatures App</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  <h1>Star Wars Miniatures App</h1>
-  {{{body}}}
+  <main class="container">
+    <h1>Star Wars Miniatures App</h1>
+    {{{body}}}
+  </main>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
 </body>
 </html>
