--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Star Wars Miniatures App</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
 </head>
 <body>
   <main class="container">
-    <h1>Star Wars Miniatures App</h1>
+    <h1 class="center flow-text">Star Wars Miniatures App</h1>
     {{{body}}}
   </main>
   
