--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,12 +8,21 @@
 }
 
 .container-miniature-item {
-  min-height: 620px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between
+  border: 1px solid #444;
+  border-radius: 4px;
+  background-color: rgba(200, 200, 200, .3);
+  margin: 5px auto;
+  height: calc(100% - 10px);
 }
 
-.container-miniature-item img {
+.container-miniature-item > header {
+  padding: 0 .75rem;
+  flex-grow: 2;
+}
+
+.container-miniature-item > img {
   width: 100%;
+  border-radius: 2px;
 }
