--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,6 +1,6 @@
 <section class="container-miniatures row">
   {{#each miniatures as |miniature index|}}
-    <div class="col s6 m6 l6 xl6">
+    <div class="col s6">
       <div class="container-miniature-item">
         <header>
           <h2 class="flow-text">{{miniature.name}}</h2>
