Add form to homepage.hbs to create new miniature
Need to do the controller and route, now

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -11,3 +11,14 @@
   {{/each}}
 </section>
 
+<section class="container-create-miniature">
+  <header>
+    <h2 class="center">Add New Miniature</h2>
+  </header>
+
+  <form action="/" method="post">
+    <input type="text" name="newMiniature[name]" placeholder="Name">
+    <input type="text" name="newMiniature[imageUrl]" placeholder="Image Url">
+    <button type="submit" class="waves-effect waves-light btn-large btn-flat">Create</button>
+  </form>
+</section>
