--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -36,3 +36,11 @@ h1 {
   width: 100%;
   border-radius: 2px;
 }
+
+.container-create-miniature > header {
+  color: #EEE;
+}
+
+.container-create-miniature > form > button {
+  color: #EEE;
+}
