--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,11 +1,13 @@
 <section class="container-miniatures row">
   {{#each miniatures as |miniature index|}}
     <div class="col s6">
-      <div class="container-miniature-item">
-        <header>
-          <h2 class="flow-text">{{miniature.name}}</h2>
-        </header>
-        <img src="./images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
+       <div class="container-miniature-item">
+        <a href="/{{miniature._id}}">
+          <header>
+            <h2 class="flow-text">{{miniature.name}}</h2>
+          </header>
+          <img src="./images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
+        </a>
       </div>
     </div>
   {{/each}}
