--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -13,11 +13,10 @@
   {{/each}}
 </section>
 
-<section class="container-create-miniature">
+<section class="container-form create-miniature">
   <header>
     <h2 class="center">Add New Miniature</h2>
   </header>
-
   <form action="/" method="post">
     <input type="text" name="newMiniature[name]" placeholder="Name">
     <input type="text" name="newMiniature[imageUrl]" placeholder="Image Url">
