--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -10,7 +10,9 @@
 </head>
 <body>
   <main class="container">
-    <h1 class="center flow-text">Star Wars Miniatures App</h1>
+    <a href="/">
+      <h1 class="center flow-text">Star Wars Miniatures App</h1>
+    </a>
     {{{body}}}
   </main>
   
