--- a/views/miniature-item.hbs
+++ b/views/miniature-item.hbs
@@ -8,3 +8,14 @@
     </div>
   </div>
 </section>
+
+<section class="container-form update-miniature">
+  <header>
+    <h2 class="center">Update Miniature</h2>
+  </header>
+  <form action="/{{miniature._id}}?_method=put" method="post">
+    <input type="text" name="updateMiniature[name]" placeholder="Name">
+    <input type="text" name="updateMiniature[imageUrl]" placeholder="Image Url">
+    <button type="submit" class="waves-effect waves-light btn-large btn-flat">Update</button>
+  </form>
+</section>
