Implement CRUD-DELETE functionality for miniature-item
Alright, that might just be a MVP

--- a/views/miniature-item.hbs
+++ b/views/miniature-item.hbs
@@ -19,3 +19,9 @@
     <button type="submit" class="waves-effect waves-light btn-large btn-flat">Update</button>
   </form>
 </section>
+
+<section class="container-form delete-miniature">
+  <form action="/{{miniature._id}}?_method=delete" method="post">
+    <button type="submit" class="waves-effect waves-light btn-large btn-flat">Delete</button>
+  </form>
+</section>
