--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -11,10 +11,15 @@
 <body>
   <main class="container">
     <a href="/">
-      <h1 class="center flow-text">Star Wars Miniatures App</h1>
+      <h1 class="center">Star Wars Miniatures App</h1>
     </a>
     {{{body}}}
   </main>
+  <footer class="center">
+    <a href="http://rebelscum.com/">
+      <img src="./images/rebelscum.gif" border="0" width="100" height="35" alt="Rebelscum image credit">
+    </a>
+  </footer>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
 </body>
