--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -13,6 +13,16 @@
     <a href="/">
       <h1 class="center">Star Wars Miniatures App</h1>
     </a>
+
+    <ul class="nav navbar-nav">
+    {{#if currentUser}}
+      <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
+    {{else}}
+      <li><a href="/login">Login</a></li>
+      <li><a href="/signup">Signup</a></li>
+    {{/if}}                
+    </ul>
+
     {{{body}}}
   </main>
   <footer class="center">
