--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,12 +1,12 @@
 <section class="container-miniatures row">
   {{#each miniatures as |miniature index|}}
     <div class="col s6">
-      <a href="/{{miniature._id}}">
+      <a href="/miniatures/{{miniature._id}}">
         <div class="container-miniature-item">
           <header>
             <h2 class="flow-text">{{miniature.name}}</h2>
           </header>
-          <img src="./images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
+          <img src="/images/{{miniature.imageUrl}}" alt="{{miniature.name}}">
         </div>
       </a>
     </div>
