Style nav via materialize
So far, so good. Now, to apply the form styles to the login and signup views

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,6 +16,10 @@ h1 {
   font-family: "SF Distant Galaxy", sans-serif;
 }
 
+nav {
+  margin-bottom: 1.68rem;
+}
+
 .container-miniatures {
   display: flex;
   flex-wrap: wrap;
