--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -10,18 +10,24 @@
 </head>
 <body>
   <main class="container">
-    <a href="/">
-      <h1 class="center">Star Wars Miniatures App</h1>
-    </a>
+    <header>
+      <a href="/">
+        <h1 class="center">Star Wars Miniatures App</h1>
+      </a>
+    </header>
 
-    <ul class="nav navbar-nav">
-    {{#if currentUser}}
-      <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
-    {{else}}
-      <li><a href="/login">Login</a></li>
-      <li><a href="/signup">Signup</a></li>
-    {{/if}}                
-    </ul>
+    <nav>
+      <div class="nav-wrapper indigo darken-1">
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+        {{#if currentUser}}
+          <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
+        {{else}}
+          <li><a href="/login">Login</a></li>
+          <li><a href="/signup">Signup</a></li>
+        {{/if}}                
+        </ul>
+      </div>
+    </nav>
 
     {{{body}}}
   </main>
