--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -4,7 +4,9 @@
   </header>
 
   {{#if message}}
-    <div class="alert alert-danger">{{message}}</div>
+    <script>
+      M.toast({ html: '{{message}}' }, 4000)
+    </script>
   {{/if}}
 
   <form method="post" action="/signup">
