--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
 
   {{#if message}}
     <script>
-      M.toast({ html: '{{message}}' }, 4000)
+      Materialize.toast('{{message}}', 4000)
     </script>
   {{/if}}
 
