--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -6,8 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Star Wars Miniatures App</title>
   <link rel="stylesheet" href="/styles/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </head>
 <body>
   <main class="container">
@@ -19,14 +24,23 @@
 
     <nav>
       <div class="nav-wrapper indigo darken-1">
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-        {{#if currentUser}}
-          <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
-        {{else}}
-          <li><a href="/login">Login</a></li>
-          <li><a href="/signup">Signup</a></li>
-        {{/if}}                
-        </ul>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="left hide-on-med-and-down">
+          {{#if currentUser}}
+            <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
+          {{else}}
+            <li><a href="/login">Login</a></li>
+            <li><a href="/signup">Signup</a></li>
+          {{/if}}
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            {{#if currentUser}}
+              <li><a href="/logout">Logout {{currentUser.local.email}}</a></li>
+            {{else}}
+              <li><a href="/login">Login</a></li>
+              <li><a href="/signup">Signup</a></li>
+            {{/if}}
+          </ul>
       </div>
     </nav>
 
@@ -37,5 +51,6 @@
       <img src="./images/rebelscum.gif" border="0" width="100" height="35" alt="Rebelscum image credit">
     </a>
   </footer>
+  <script src="/js/script.js"></script>
 </body>
 </html>
