--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -15,11 +15,11 @@
 
 <section class="container-form create-miniature">
   <header>
-    <h2 class="center">Add New Miniature</h2>
+    <h2 class="amber-text text-lighten-1">Add New Miniature</h2>
   </header>
   <form action="/" method="post">
-    <input type="text" name="newMiniature[name]" placeholder="Name">
-    <input type="text" name="newMiniature[imageUrl]" placeholder="Image Url">
+    <label>Name <input type="text" name="newMiniature[name]"></label>
+    <label>Image Url <input type="text" name="newMiniature[imageUrl]"></label>
     <button type="submit" class="waves-effect waves-light btn-large btn-flat">Create</button>
   </form>
 </section>
