--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -48,7 +48,7 @@
   </main>
   <footer class="center">
     <a href="http://rebelscum.com/">
-      <img src="./images/rebelscum.gif" border="0" width="100" height="35" alt="Rebelscum image credit">
+      <img src="/images/rebelscum.gif" border="0" width="100" height="35" alt="Rebelscum image credit">
     </a>
   </footer>
   <script src="/js/script.js"></script>
