--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <section class="container-form">
   <header>
-    <h2>Login</h2>
+    <h2 class="amber-text text-lighten-1">Login</h2>
   </header>
 
   {{#if message}}
