--- a/views/miniature-item.hbs
+++ b/views/miniature-item.hbs
@@ -11,7 +11,7 @@
 
 <section class="container-form update-miniature">
   <header>
-    <h2 class="center">Update Miniature</h2>
+    <h2 class="amber-text text-lighten-1">Update Miniature</h2>
   </header>
   <form action="/miniatures/{{miniature._id}}?_method=put" method="post">
     <input type="text" name="updateMiniature[name]" placeholder="Name" value="{{miniature.name}}">
