--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,6 +1,6 @@
 <section class="container-form">
   <header>
-    <h2>Signup</h2>
+    <h2 class="amber-text text-lighten-1">Signup</h2>
   </header>
 
   {{#if message}}
