Update forms in views to  include labels for inputs

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -18,8 +18,12 @@
     <h2 class="amber-text text-lighten-1">Add New Miniature</h2>
   </header>
   <form action="/" method="post">
-    <label>Name <input type="text" name="newMiniature[name]"></label>
-    <label>Image Url <input type="text" name="newMiniature[imageUrl]"></label>
+    <label>Name
+      <input type="text" name="newMiniature[name]">
+    </label>
+    <label>Image Url
+      <input type="text" name="newMiniature[imageUrl]">
+    </label>
     <button type="submit" class="waves-effect waves-light btn-large btn-flat">Create</button>
   </form>
 </section>
