--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -10,8 +10,12 @@
   {{/if}}
 
   <form method="post" action="/signup">
-    <input class="form-control" type="text" name="email" placeholder="Email">
-    <input class="form-control" type="password" name="password" placeholder="Password">
+    <label>Email
+      <input class="form-control" type="text" name="email">
+    </label>
+    <label>Password
+      <input class="form-control" type="password" name="password">
+    </label>
     <button type="submit" class="waves-effect waves-light btn-large btn-flat">Sign Up</button>
   </form>
 </section>
