Styles form forms
Man, maybe using materialize has some associated costs

Like, I had to add the utility classes to four views, which is WET and not DRY at all.

However, There were two main patterns I followed, and I had a lot of flexibility in experimenting
with what I wanted.

So, there's tradeoffs.

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -13,11 +13,11 @@
   {{/each}}
 </section>
 
-<section class="container-form create-miniature">
+<section class="container-form create-miniature row">
   <header>
-    <h2 class="amber-text text-lighten-1">Add New Miniature</h2>
+    <h2 class="amber-text text-lighten-1 center">Add New Miniature</h2>
   </header>
-  <form action="/" method="post">
+  <form action="/" method="post" class="col s6 offset-s3">
     <label>Name
       <input type="text" name="newMiniature[name]">
     </label>
