--- a/views/miniature-item.hbs
+++ b/views/miniature-item.hbs
@@ -9,11 +9,11 @@
   </div>
 </section>
 
-<section class="container-form update-miniature">
+<section class="container-form update-miniature row">
   <header>
-    <h2 class="amber-text text-lighten-1">Update Miniature</h2>
+    <h2 class="amber-text text-lighten-1 center">Update Miniature</h2>
   </header>
-  <form action="/miniatures/{{miniature._id}}?_method=put" method="post">
+  <form action="/miniatures/{{miniature._id}}?_method=put" method="post" class="col s6 offset-s3">
     <label>Name
       <input type="text" name="updateMiniature[name]" value="{{miniature.name}}">
     </label>
@@ -24,8 +24,8 @@
   </form>
 </section>
 
-<section class="container-form delete-miniature">
-  <form action="/miniatures/{{miniature._id}}?_method=delete" method="post">
+<section class="container-form delete-miniature row">
+  <form action="/miniatures/{{miniature._id}}?_method=delete" method="post" class="col s6 offset-s3">
     <button type="submit" class="waves-effect waves-light btn-large btn-flat">Delete</button>
   </form>
 </section>
