Remove Passport Authentication, including navbar in handlebars view

--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -22,7 +22,7 @@
       </a>
     </header>
 
-    <nav>
+    {{!-- <nav>
       <div class="nav-wrapper indigo darken-1">
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
@@ -42,7 +42,7 @@
             {{/if}}
           </ul>
       </div>
-    </nav>
+    </nav> --}}
 
     {{{body}}}
   </main>
